--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandra</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <h1>Alejandra</h1>
-    <h2>Desarrollo web</h2>
-    
+    <h2>Se agrego un subtitulo</h2>
 </body>
 </html>
