--- a/index1.html
+++ b/index1.html
@@ -8,6 +8,8 @@
     <title>Alejandra</title>
 </head>
 <body>  
-    <h1>Alejandra</h1>  
+    <h1>Alejandra</h1> 
+    <img src="https://i.postimg.cc/pL3zrqqS/elliot-garamendi-perrito.webp" alt="Elliot Garamendi" width="256"
+      height="256" /> 
 </body>
 </html>
