--- a/index1.html
+++ b/index1.html
@@ -11,5 +11,9 @@
     <h1>Alejandra</h1> 
     <img src="https://i.postimg.cc/pL3zrqqS/elliot-garamendi-perrito.webp" alt="Elliot Garamendi" width="256"
       height="256" /> 
+      <h2>👨‍💻Desarrollador👨‍💻 | 🌌Frontend🌌 | ⚛React⚛ | 🌐Next.js🌐 | 💻Docente💻​</h2>
+      <h3>Junior Frontend</h3>
+      <span>Lima, Perú</span>
+
 </body>
 </html>
